[gd_scene load_steps=2 format=3 uid="uid://br3lkcfiindal"]

[ext_resource type="Script" uid="uid://cvf5p53wp41dr" path="res://nounPicker/NounPicker.gd" id="1_0x8y9"]

[node name="NounPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8y9")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Which should be made [adjective]?"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BodyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Body: [noun]"

[node name="FeetButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Feet: [noun]"

[node name="HandButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Hand: [noun]"

[node name="SelectionDisplay" type="RichTextLabel" parent="VBoxContainer"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[adjective] [noun]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Confirm"

[node name="ProgressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Adjective X of Y"
horizontal_alignment = 1
vertical_alignment = 1
